<resources>
    <string name="app_name">AndroTennis</string>
    <string name="perform_add_perform">Ajouter une performance</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_perform">Performances</string>
    <string name="menu_hist">Historique</string>
    <string name="menu_export">Exporter données</string>
    <string name="home_text">AndroTennis : Vous permet de connaître d\'un coup d\'oeil vos dernières performances.</string>
    <string name="home_about">A propos</string>
    <string name="home_add_perform">Ajouter Performance</string>
    <string name="home_see_perform">Voir les Performances</string>
    <string name="home_last_perform">Les dernières données :</string>
    <string name="add_perform_add_text_noma">Nom adversaire ou entraînement</string>
    <string name="add_perform_add_text_location">Lieu de la performance</string>
    <string name="add_perform_add_text_date">Date de la performance</string>
    <string name="add_perform_add_text_result">Victoire</string>
    <string name="add_perform_add_text_set1j">Score Set 1</string>
    <string name="add_perform_add_text_set2j">Score Set 2</string>
    <string name="add_perform_add_text_set3j">Score Set 3</string>
    <string name="add_perform_add_text_set1a">Score Set 1 adversaire</string>
    <string name="add_perform_add_text_set2a">Score Set 2 adversaire</string>
    <string name="add_perform_add_text_set3a">Score Set 3 adversaire</string>
    <string name="add_perform_button_text">Ajouter</string>
    <string name="add_perform_date_type">JJ-MM-AAAA</string>
    <string name="about_main">AndroTennis &#169;2017</string>
    <string name="about_authors">Auteurs : Alexis Zueras, Tristan Fongaro, Jean Mariette.</string>
    <string name="about_else">Réalisé Pour la LDNR. Sous la tutelle de Michael Blanchard</string>
    <string name="splash_text">AndroTennis vous aide à vous améliorer</string>
    <string name="splash_text_2">N\'oubliez pas d\'enregistrer vos performances!</string>
    <string name="splash_text_3">Le graphique donne un aperçu des derniers résultats</string>
    <string name="splash_text_4">Soyez patient et rigoureux, vous y arriverez</string>
    <string name="modify_perform_button">Modifier</string>
    <string name="delete_perform_button">Supprimer</string>
    <string name="cancel_button">Annuler</string>
    <string name="need_name">Vous devez ajouter un nom!</string>
    <string name="need_good_date">Format de date incorrect</string>
    <string name="added_perform">Performance ajoutée</string>
    <string name="home_adversary">Adversaire : </string>
    <string name="home_date"> Date : </string>
    <string name="modify_done">Entrée modifiée!</string>
    <string name="result_victory">Résultat : Victoire</string>
    <string name="result_loose">Résultat : Défaite</string>
    <string name="score_set1j">Score Set 1 : </string>
    <string name="score_set1a">Score Set 1 Adversaire : </string>
    <string name="score_set2j">Score Set 2 : </string>
    <string name="score_set2a">Score Set 2 Adversaire : </string>
    <string name="score_set3j">Score Set 3 : </string>
    <string name="score_set3a">Score Set 3 Adversaire : </string>
    <string name="location">Lieu : </string>
    <string name="adversary_name">Nom : </string>
    <string name="delete_alert_message">Êtes vous sur de vouloir supprimer?</string>
    <string name="delete_yes">Oui</string>
    <string name="delete_no">Non</string>
    <string name="modify_dialog_message">Êtes vous sûr?</string>
    <string name="histo_date">Date</string>
    <string name="histo_nom">Nom</string>
    <string name="histo_set1j">Set1</string>
    <string name="histo_set1a">Set 1 adv.</string>
    <string name="histo_set2j">Set2</string>
    <string name="histo_set2a">Set 2 adv.</string>
    <string name="histo_set3j">Set3</string>
    <string name="histo_set3a">Set 3 adv.</string>
    <string name="histo_loc">Lieu</string>
    <string name="add_confirm">Ajouter ?</string>
</resources>
