<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/tennisman1"

        />

    <ViewFlipper
        android:id="@+id/splash_fliptext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:autoStart="true"
        android:flipInterval="2000">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/splash_text"
            android:textAlignment="center"
            android:textSize="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/splash_text_2"
            android:textAlignment="center"
            android:textSize="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/splash_text_3"
            android:textAlignment="center"
            android:textSize="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/splash_text_4"
            android:textAlignment="center"
            android:textSize="30dp"/>
    </ViewFlipper>
</RelativeLayout>