<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/home_buttons"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:targetApi="GINGERBREAD">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_home"
            android:onClick="onWelcomeButtonClicked"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_perform"
            android:onClick="onSeePerformButtonClicked"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_hist"
            android:onClick="onHistoricButtonClicked"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_export"
            android:onClick="onExportButtonClicked"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/column_1"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:background="#f00"
        android:orientation="vertical"

        >
        <!--android:columnCount="2"
        android:rowCount="5"-->


<LinearLayout
    android:id="@+id/image_layout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:orientation="vertical"


    >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"

            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            />

    <TextView
        android:id="@+id/home_text"
        android:text="@string/home_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"


            >

            <Button
                android:id="@+id/button_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/home_about"
                android:onClick="onAboutButtonClicked"/>
        </LinearLayout>
    </LinearLayout>



        <LinearLayout
            android:id="@+id/column_2"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#956">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#f55"
                android:orientation="vertical"
                android:gravity="center_vertical"

                >

                <TextView
                    android:id="@+id/last_add_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/last_add_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/last_add_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/last_add_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/last_add_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/home_add_perform"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_add_perform"
                    android:onClick="OnAddPerformButtonClicked"/>
                <Button
                    android:id="@+id/home_see_perform"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_see_perform"
                    android:onClick="onSeePerformButtonClicked"/>

            </LinearLayout></LinearLayout>

        </LinearLayout>


    </LinearLayout>


